show list member function

--- a/MovieBooking 2/src/main/resources/templates/component/AdminSidebar.html
+++ b/MovieBooking 2/src/main/resources/templates/component/AdminSidebar.html
@@ -9,15 +9,15 @@
         </div>
         <div class="card-selection align-items-center">
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><a href="">Register Account</a></li>
-                <li class="list-group-item"><a href="">Account management</a></li>
-                <li class="list-group-item"><a href="">Booking Ticket</a></li>
-                <li class="list-group-item"><a href="">Ticket Selling Management</a></li>
-                <li class="list-group-item"><a href="">Ticket Booking Management</a></li>
-                <li class="list-group-item"><a href="">Employee Management</a></li>
-                <li class="list-group-item"><a href="/cinemaRoom/listCinemaRoom">Cinema Room Management</a></li>
-                <li class="list-group-item"><a href="">Movie Management</a></li>
-                <li class="list-group-item"><a href="">Promotion Management</a></li>
+                <li class="list-group-item text-start"><a href="">Register Account</a></li>
+                <li class="list-group-item text-start"><a href="">Account management</a></li>
+                <li class="list-group-item text-start"><a href="">Booking Ticket</a></li>
+                <li class="list-group-item text-start"><a href="">Ticket Selling Management</a></li>
+                <li class="list-group-item text-start"><a href="">Ticket Booking Management</a></li>
+                <li class="list-group-item text-start"><a href="">Employee Management</a></li>
+                <li class="list-group-item text-start"><a href="/cinemaRoom/listCinemaRoom">Cinema Room Management</a></li>
+                <li class="list-group-item text-start"><a href="">Movie Management</a></li>
+                <li class="list-group-item text-start"><a href="">Promotion Management</a></li>
             </ul>
 
         </div>
