--- a/MovieBooking 2/src/main/resources/templates/edit-account.html
+++ b/MovieBooking 2/src/main/resources/templates/edit-account.html
@@ -72,7 +72,7 @@
               />
             </div>
             <div>
-              <form id="form-edit" action="" th:object="${account}" th:action="@{/edit}" enctype="multipart/form-data" method="post">
+              <form id="form-edit" action="" th:object="${account}" th:action="@{edit}" enctype="multipart/form-data" method="post">
                 <input type="hidden" th:field="*{id}"/>
                 <div class="mb-3">
                   <label class="form-label">Account: <span class="text-danger">*</span></label>
@@ -271,7 +271,7 @@
         function isValidDate(year, month, day) {
           var d = new Date(year, month - 1, day);
           const split = d.toLocaleDateString().split("/");
-          if (split[2] == year && split[1] == month  && split[0] == parseInt(day)) {
+          if (split[2] == year && split[1] == parseInt(day)  && split[0] == month) {
             return true;
           }
           return false;
