--- a/MovieBooking 2/src/main/resources/templates/converttoticketmember.html
+++ b/MovieBooking 2/src/main/resources/templates/converttoticketmember.html
@@ -92,14 +92,14 @@
 <!-- Main Container -->
 <div class="container-fluid">
     <!-- Header -->
-    <div th:replace = "component/UserHeader::header">...</div>
+    <div th:insert="~{component/UserHeader}">...</div>
 
 
     <div class="row">
         <!-- Sidebar of Admin -->
         <div class="col-2 sidebar" style="background-color: white;">
             <!-- Sidebar content here -->
-            <div th:replace = "component/UserSideBar::sidebar">...</div>
+            <div th:insert="~{component/UserSideBar}">...</div>
         </div>
         <!-- Main Content -->
         <div class="col-10 content ">
