--- a/MovieBooking 2/src/main/resources/templates/component/UserSideBar.html
+++ b/MovieBooking 2/src/main/resources/templates/component/UserSideBar.html
@@ -1,6 +1,6 @@
 
   <!-- Sidebar content here -->
-  <div th:fragment = "sidebar"
+  <div
           class="card-holder h-100 text-center" style="background-color: white;">
     <div class="card-header" style="background-color: white;">
       <img src="https://i.pinimg.com/564x/5b/b1/6e/5bb16e3e270ae5dd89dd9f29064eb12a.jpg" alt=""
