--- a/MovieBooking 2/src/main/resources/templates/listPromotion.html
+++ b/MovieBooking 2/src/main/resources/templates/listPromotion.html
@@ -70,59 +70,12 @@
 <body>
 	<!-- Main Container -->
 	<div class="container-fluid">
-		<div class="row d-flex align-items-center"
-			style="background-color: #205081; height: 60px">
-			<div class="col-2">
-				<img
-					src="https://cdn.haitrieu.com/wp-content/uploads/2022/01/Logo-FPT.png"
-					alt="" style="height: 40px" />
-			</div>
-			<div class="col-10">
-				<div class="d-flex justify-content-between align-items-center">
-					<div class="d-flex gap-4 align-items-center ms-5"></div>
-					<div class="d-flex gap-4">
-						<a href="#" class="text-white text-decoration-none"> <i
-							class="fa-solid fa-user"></i> <span>Welcome, tientv5</span>
-						</a>
-						<div class="text-white" style="cursor: pointer">
-							<i class="fa-solid fa-power-off"></i> <span>Logout</span>
-						</div>
-					</div>
-				</div>
-			</div>
+		<div th:insert="~{component/AdminHeader}"></div>
 		</div>
 		<div class="row">
 			<div class="col-2 sidebar" style="background-color: white">
 				<!-- Sidebar content here -->
-				<div class="card-holder h-100 text-center"
-					style="background-color: white">
-					<div class="card-header" style="background-color: white">
-						<img
-							src="https://i.pinimg.com/564x/5b/b1/6e/5bb16e3e270ae5dd89dd9f29064eb12a.jpg"
-							alt=""
-							style="height: 100px; width: 100px; border-radius: 100%; align-self: center;" />
-						<h5 class="card-title">User name</h5>
-					</div>
-					<div class="card-selection align-items-center">
-						<ul class="list-group list-group-flush">
-							<li class="list-group-item"><a href="">Register Account</a></li>
-							<li class="list-group-item"><a href="">Account
-									management</a></li>
-							<li class="list-group-item"><a href="">Booking Ticket</a></li>
-							<li class="list-group-item"><a href="">Ticket Selling
-									Management</a></li>
-							<li class="list-group-item"><a href="">Ticket Booking
-									Management</a></li>
-							<li class="list-group-item"><a href="">Employee
-									Management</a></li>
-							<li class="list-group-item"><a href="">Cinema Room
-									Management</a></li>
-							<li class="list-group-item"><a href="">Movie Management</a></li>
-							<li class="list-group-item"><a href="">Promotion
-									Management</a></li>
-						</ul>
-					</div>
-				</div>
+				<div th:insert="~{/component/AdminSidebar}"></div>
 			</div>
 
 			<!-- Main Content -->
@@ -234,8 +187,19 @@
 			</div>
 		</div>
 	</div>
+	<input type="hidden" th:value="${message}" id="message"/>
 
 	<script>
+		// Hiển thị alert nếu có thông báo add/update thành công
+		window.onload = function() {
+			// Lấy giá trị thực của message từ server-side
+			var message = $('#message').val();
+
+			// Kiểm tra nếu message không rỗng hoặc không undefined/null
+			if (message && message.trim() !== "") {
+				alert(message);
+			}
+		};
 		let promotionId;
 
 		// Trigger the modal and set promotionId
