--- a/MovieBooking 2/src/main/resources/templates/component/AdminHeader.html
+++ b/MovieBooking 2/src/main/resources/templates/component/AdminHeader.html
@@ -2,8 +2,10 @@
 <div class="row d-flex align-items-center" style="background-color: #205081; height: 60px"
      xmlns:sec="http://www.w3.org/1999/xhtml">
         <div class="col-2">
-            <img src="https://cdn.haitrieu.com/wp-content/uploads/2022/01/Logo-FPT.png" alt=""
-                 style="height: 40px" />
+            <a href="/homeAdmin">
+                <img src="https://cdn.haitrieu.com/wp-content/uploads/2022/01/Logo-FPT.png" alt=""
+                     style="height: 40px" />
+            </a>
         </div>
         <div class="col-10">
             <div class="d-flex justify-content-end align-items-center">
@@ -36,8 +38,7 @@
                 </div>
             </div>
         </div>
-<<<<<<< HEAD
+
     </div>
-=======
-    </div>
->>>>>>> e53cbe3e7442c20d2a24383a10bcdc011b38e2d4
+
+
