--- a/MovieBooking 2/src/main/resources/templates/component/AdminSidebar.html
+++ b/MovieBooking 2/src/main/resources/templates/component/AdminSidebar.html
@@ -10,15 +10,14 @@
         <div class="card-selection align-items-center">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><a href="">Register Account</a></li>
-                <li class="list-group-item"><a href="">Account management</a></li>
+                <li class="list-group-item"><a href="/member-management/members">Account management</a></li>
                 <li class="list-group-item"><a href="">Booking Ticket</a></li>
-                <li class="list-group-item"><a href="">Ticket Selling Management</a></li>
-                <li class="list-group-item"><a href="">Ticket Booking Management</a></li>
-                <li class="list-group-item"><a href="">Employee Management</a></li>
+                <li class="list-group-item"><a href="/showtimes">Ticket Selling Management</a></li>
+                <li class="list-group-item"><a href="/admin/booking-list">Ticket Booking Management</a></li>
+                <li class="list-group-item"><a href="/employee-management/employees">Employee Management</a></li>
                 <li class="list-group-item"><a href="/cinemaRoom/listCinemaRoom">Cinema Room Management</a></li>
-                <li class="list-group-item"><a href="">Movie Management</a></li>
-                <li class="list-group-item"><a href="">Promotion Management</a></li>
+                <li class="list-group-item"><a href="/movies">Movie Management</a></li>
+                <li class="list-group-item"><a href="/listPromotion">Promotion Management</a></li>
             </ul>
-
         </div>
     </div>
