update img and homepage of employee

--- a/MovieBooking 2/src/main/resources/templates/TKS-showtimes.html
+++ b/MovieBooking 2/src/main/resources/templates/TKS-showtimes.html
@@ -80,9 +80,10 @@
     }
 
     .poster {
-      width: 100px;
+      width: 150px;
       height: 200px;
       transition: box-shadow 0.3s ease;
+      object-fit: cover;
     }
 
     .poster:hover {
