--- a/MovieBooking 2/src/main/resources/templates/member-list.html
+++ b/MovieBooking 2/src/main/resources/templates/member-list.html
@@ -30,6 +30,10 @@
       crossorigin="anonymous"
     ></script>
     <style>
+      .list-group-item {
+        text-align: start;
+      }
+
       .list-group-item a {
         text-decoration: none;
         color: black;
