--- a/MovieBooking 2/src/main/resources/templates/MovieList.html
+++ b/MovieBooking 2/src/main/resources/templates/MovieList.html
@@ -47,12 +47,14 @@
             border: 1px solid #ddd;
             position: relative;
             object-fit: cover;
+            height: 200px;
         }
 
         .movie-card img {
             width: 100%;
             height: 100%;
             display: block;
+            object-fit: cover;
         }
 
         .schedule-btn {
