--- a/MovieBooking 2/src/main/resources/templates/component/EmployeeSideBar.html
+++ b/MovieBooking 2/src/main/resources/templates/component/EmployeeSideBar.html
@@ -12,7 +12,7 @@
             <li class="list-group-item"><a href="/member-management/members">Member management</a></li>
             <li class="list-group-item"><a href="">Booking Ticket</a></li>
             <li class="list-group-item"><a href="/showtimes">Ticket Selling Management</a></li>
-            <li class="list-group-item"><a href="/member/booking-list">Ticket Booking Management</a></li>
+            <li class="list-group-item"><a href="/admin/booking-list">Ticket Booking Management</a></li>
         </ul>
     </div>
 </div>
