--- a/MovieBooking 2/src/main/resources/templates/cinemaRoom/addCinemaRoom.html
+++ b/MovieBooking 2/src/main/resources/templates/cinemaRoom/addCinemaRoom.html
@@ -63,6 +63,11 @@
         .star {
             color: red;
         }
+
+        .btn{
+            background-color: #205081;
+            color: white;
+        }
     </style>
 </head>
 
@@ -98,8 +103,8 @@
                         <small class="text-danger" id="seatQuantityError"></small>
                     </div>
                     <div class="mb-3">
-                        <button type="submit" class="btn btn-primary"><i class="fa fa-check"></i>Add</button>
-                        <a th:href="@{/cinemaRoom/listCinemaRoom}" class="btn btn-primary"><i class="fa fa-xmark"></i>Back</a>
+                        <button type="submit" class="btn "><i class="fa fa-check"></i>Add</button>
+                        <a th:href="@{/cinemaRoom/listCinemaRoom}" class="btn "><i class="fa fa-xmark"></i>Back</a>
                     </div>
                 </form>
             </div>
