--- a/MovieBooking 2/src/main/resources/templates/cinemaRoom/listCinemaRoom.html
+++ b/MovieBooking 2/src/main/resources/templates/cinemaRoom/listCinemaRoom.html
@@ -59,6 +59,11 @@
             border-bottom: 2px solid #dee2e6;
             padding-bottom: 10px;
         }
+
+        .btn{
+            background-color: #205081;
+            color: white;
+        }
     </style>
 </head>
 
@@ -84,7 +89,7 @@
                 <div class="mb-3">
                     <!-- Button -->
                     <div class="d-flex justify-content-start mb-2">
-                        <a class="btn btn-primary" th:href="@{/cinemaRoom/formAddCinemaRoom}" ><i class="fa-solid fa-circle-plus"></i> Add new</a>
+                        <a class="btn" th:href="@{/cinemaRoom/formAddCinemaRoom}" ><i class="fa-solid fa-circle-plus"></i> Add new</a>
                     </div>
 
                     <!-- Form -->
