--- a/MovieBooking 2/src/main/resources/templates/login.html
+++ b/MovieBooking 2/src/main/resources/templates/login.html
@@ -34,7 +34,7 @@
   <body>
     <div class="container-fluid">
       <!-- Header -->
-<!--      <div th:insert="~{resources/templates/component/}"></div>-->
+      <div th:insert="~{/component/UserHeader}"></div>
 
       <!-- Content -->
       <div class="row">
