--- a/MovieBooking 2/src/main/resources/templates/Movie/EditMovieModal.html
+++ b/MovieBooking 2/src/main/resources/templates/Movie/EditMovieModal.html
@@ -93,7 +93,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="largeImage" class="form-label">Image URL:</label>
-                        <input type="url" class="form-control" id="largeImage" th:field="*{largeImage}">
+                        <input type="file" class="form-control" id="largeImage" th:field="*{largeImage}">
                     </div>
                 </form>
             </div>
